@@ -12,6 +12,7 @@ Adam Hawthorne
 Diane Holt
 Andrew M. Inggs
 C. Brian Jones
+Takashi Okamoto
 Kumaran Santhanam
 Andrew G. Tereschenko
 Russ Trotter
