@@ -1,6 +1,6 @@
 Makefile
 config.h
-stamp-h
+stamp-h*
 gencode.class
 .deps
 classbin.stamp
