@@ -132,6 +132,14 @@ Currently, we do not use this one
 # include <float.h>
 #endif
 
+#ifdef HAVE_LANGINFO_H
+# include <langinfo.h>
+#endif
+
+#ifdef HAVE_LOCALE_H
+# include <locale.h>
+#endif
+
 // C++ standard support
 
 #ifdef HAVE_STD
